<resources>
    <string name="app_name">Wireless Accelerometer</string>
    <string name="action_settings">Settings</string>
    <string name="app_acronym">Wireless Accelerometer Tool (WAT)</string>
    <string name="scan_button">Scan for devices</string>
    <string name="device_config_button">Configure Device</string>
    <string name="select_connected_device">Select a connected device:</string>
    <string name="cancel_text">Cancel</string>
    <string name="submit_text">Submit</string>
    <string name="num_time_bins">Number of time bins</string>
    <string name="bin_text">Bin size</string>
    <string name="UUID_text_string">Device Name</string>
    <string name="sample_rate_text">Sample rate (samples/second)</string>
    <string name="default_dropdown_connected_devices">Select device to configure</string>
    <string name="default_units">Select units</string>
    <string name="sample_rate_bounds">Select sample rate</string>
    <string name="bin_size_bounds">500ms - 7 days</string>
    <string name="connection_indicator_true">Connected</string>
    <string name="connection_indicator_false">Not Connected</string>
    <string name="num_bin_bounds">1-10000 time bins</string>
    <string-array name="connected_devices">
        <item>Default</item>
    </string-array>

    <string-array name="unit_types_bins">
        <item>Milliseconds</item>
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
    </string-array>
    <string-array name="sample_rate_options">
        <item>400Hz</item>
        <item>800Hz</item>
        <item>1600Hz</item>
        <item>3200Hz</item>
        <item>6400Hz</item>
    </string-array>
</resources>
